# SC-BLTC

./: .gitignore  Cargo.toml  README.md
src/: channel.rs  crypto.rs  frame.rs  interleaver.rs  ldpc.rs  ldpc_code.rs  lib.rs  params.rs  polar.rs  ring.rs  rrc.rs  tracking.rs  walsh.rs
src/modem/: acq.rs  demod.rs  mod.rs  tests.rs  tx.rs  util.rs
tests/: acquisition_robustness.rs  doppler_decode.rs
