[package]
name = "sc_bltc"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
num-complex = "0.4"
rayon = "1.11"
rustfft = "6"
aes = "0.8"
ctr = "0.9"
cipher = "0.4"
rand_distr = "0.5.1"
serde = { version = "1", features = ["derive"] }
toml = "0.9"

[dev-dependencies]
rand = "0.9"
